--- a/demo/demo.css
+++ b/demo/demo.css
@@ -15,6 +15,20 @@ ul.content li h1 {
   text-align: center;
 }
 
+.scroller {
+  background: #CCC;
+  box-shadow: inset 0 0 5px 0 black;
+  height: 1px;
+  overflow: hidden;
+}
+
+.scroller h3 {
+  color: rgba(0,0,0,0.3);
+  font-size: 30px;
+  margin-top: 20px;
+  text-align: center;
+}
+
 ul.content li.first { background: #333; }
 ul.content li.second { background: #666; }
 ul.content li.third { background: #999; }
