--- a/demo/template/css/template.css
+++ b/demo/template/css/template.css
@@ -1,5 +1,5 @@
 body {
-  background: url(http://subtlepatterns.com/patterns/bright_squares.png);
+  background: url(../images/bright_squares.png);
   font-family: Georgia;
   font-size: 13px;
   min-width: 300px;
